--- a/app.json
+++ b/app.json
@@ -2,17 +2,25 @@
   "expo": {
     "name": "EnvironmentApp",
     "slug": "EnvironmentApp",
+    "scheme": "envapp269",
+    "owner": "net269gaming",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "environmentapp",
+
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
 
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.EnvironmentApp",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Ứng dụng cần truy cập Camera để chụp ảnh phân loại rác và báo cáo vi phạm.",
+        "NSMicrophoneUsageDescription": "Ứng dụng cần truy cập Micro để quay video bằng chứng báo cáo.",
+        "NSPhotoLibraryUsageDescription": "Ứng dụng cần truy cập thư viện để chọn ảnh báo cáo.",
+        "NSLocationWhenInUseUsageDescription": "Ứng dụng cần vị trí để hiển thị các điểm thu gom rác gần bạn."
+      }
     },
-
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
@@ -20,9 +28,13 @@
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false,
-      "package": "com.anonymous.EnvironmentApp"
+      "package": "com.anonymous.EnvironmentApp",
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ]
     },
 
     "web": {
@@ -30,31 +42,33 @@
       "favicon": "./assets/images/favicon.png"
     },
 
-    "extra": {
-      "androidClientId": "YOUR_ANDROID_OAUTH_CLIENT_ID",
-      "webClientId": "184252200932-ebbc2j7889bbbqncv8m620hkq2mdks7l.apps.googleusercontent.com"
-    },
-
     "plugins": [
       "expo-router",
+      "expo-secure-store",
+      "expo-video",
       [
-        "expo-splash-screen",
+        "expo-image-picker",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
-          "dark": {
-            "backgroundColor": "#000000"
-          }
+          "photosPermission": "Cho phép ứng dụng truy cập ảnh của bạn để tải lên báo cáo."
         }
       ],
-      "expo-secure-store"
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Cho phép ứng dụng sử dụng vị trí để tìm điểm tái chế."
+        }
+      ]
     ],
-
+    
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "8cfe4ef8-a57a-4821-81e6-514909c3f3c3"
+      }
     }
   }
 }
