--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
+    "expo-video": "~3.0.14",
     "expo-web-browser": "~15.0.9",
     "firebase": "^12.6.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.28.0",
@@ -52,7 +53,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0",
+    "react-native-web": "^0.21.2",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
